# numen

./: .gitattributes  CMakeLists.txt  mise.toml
cmake/: build_numen.cmake  build_tests.cmake  install_numen.cmake  numen.pc.in
docs/: book.toml  template.md
docs/book/: 02-Initialization.html  03-BasicOperations.html  04-MatrixMultiplication.html  404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-d8fcfe82.js  toc-703f937b.js  toc.html
docs/matrix/: 01-Types.md  02-Initialization.md  03-BasicOperations.md  04-MatrixMultiplication.md
docs/src/: 01-Types.md  02-Initialization.md  03-BasicOperations.md  04-MatrixMultiplication.md  SUMMARY.md
numen/matrix/: mat2d.h  mat3d.h  mat4d.h
numen/utils/: consts.h  errors.h  math.h  simd.h
numen/vector/: vec2d.h  vec3d.h  vec4d.h
nutest/: README.md  nutest.c  nutest.h
src/matrix/: mat2d.c  mat3d.c  mat4d.c
src/utils/: math.c
src/vector/: vec2d.c  vec3d.c  vec4d.c
tests/: CMakeLists.txt  test_example.c  test_vec2d.c  test_vec3d.c  test_vec4d.c
tests/matrix/: test_mat2d.c  test_mat3d.c  test_mat4d.c
tests/vector/: test_vec2d.c  test_vec3d.c  test_vec4d.c
